WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176155
[JSC] Fix "name" and "length" of Proxy revoke function
https://bugs.webkit.org/show_bug.cgi?id=176155
Summary
[JSC] Fix "name" and "length" of Proxy revoke function
Yusuke Suzuki
Reported
2017-08-31 03:47:28 PDT
[JSC] Fix "name" and "length" of Proxy revoke function
Attachments
Patch
(6.55 KB, patch)
2017-08-31 03:48 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2017-08-31 03:48:13 PDT
Created
attachment 319456
[details]
Patch
Mark Lam
Comment 2
2017-08-31 09:32:01 PDT
Comment on
attachment 319456
[details]
Patch r=me
Saam Barati
Comment 3
2017-08-31 10:06:48 PDT
So Object.getOwnPropertyDescriptor(revokeFunction, “name”) is undefined?
Yusuke Suzuki
Comment 4
2017-08-31 23:11:53 PDT
(In reply to Saam Barati from
comment #3
)
> So Object.getOwnPropertyDescriptor(revokeFunction, “name”) is undefined?
Yeah.
WebKit Commit Bot
Comment 5
2017-08-31 23:40:59 PDT
Comment on
attachment 319456
[details]
Patch Clearing flags on attachment: 319456 Committed
r221475
: <
http://trac.webkit.org/changeset/221475
>
WebKit Commit Bot
Comment 6
2017-08-31 23:41:00 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-09-27 12:45:20 PDT
<
rdar://problem/34693886
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug