[JSC] Fix "name" and "length" of Proxy revoke function https://bugs.webkit.org/show_bug.cgi?id=176155

Reviewed by Mark Lam.

JSTests:

* test262.yaml:

Source/JavaScriptCore:

ProxyRevoke's length should be configurable. And it does not have
its own name. We add NameVisibility enum to InternalFunction to
control visibility of the name.

* runtime/InternalFunction.cpp:
(JSC::InternalFunction::finishCreation):
* runtime/InternalFunction.h:
* runtime/ProxyRevoke.cpp:
(JSC::ProxyRevoke::finishCreation):


Canonical link: https://commits.webkit.org/192875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221475 268f45cc-cd09-0410-ab3c-d52691b4dbfc